--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9691,7 +9691,7 @@ Lexibook:
     - regex: '(MFC[0-9]{3}[a-z]{2,})'
       model: '$1'
 
-# LG
+# LG (lg.com)
 LG:
   regex: 'LG|Web0S; Linux/SmartTV|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|VS820|VS870 4G|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05[DE]|L-03K|L-01[LJK]|L-52A|L-[45]1A|901LG|A001LG|80[12]LG|402LG|LGT32|L-02K|L-01F|LM-V40|DM-01K|DM-02H|LMX130IM|VS810PP|VS425'
   device: 'smartphone'
@@ -9700,7 +9700,7 @@ LG:
       model: 'Disney Mobile DM-$1'
     - regex: 'LG-D32[05]'
       model: 'L70'
-    - regex: 'LG-D315'
+    - regex: 'LG-?(D315|L31L)'
       model: 'F70'
     - regex: 'LG-D4(?:[01]5|10)'
       model: 'L90'
@@ -9708,8 +9708,12 @@ LG:
       model: 'L80'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
+    - regex: 'LG-D125'
+      model: 'L30'
     - regex: 'LG-X145'
       model: 'L60'
+    - regex: 'LG-X135'
+      model: 'L60i'
     - regex: 'LG-D285'
       model: 'L65'
     - regex: 'LM-X210APM'
@@ -9722,12 +9726,14 @@ LG:
       model: 'Tribute Empire'
     - regex: 'LGLS675'
       model: 'Tribute 5'
-    - regex: 'VS980|L-01F|LG-F320L'
+    - regex: 'VS980|L-01F|LG-F320L|LG-D800'
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
     - regex: 'LG-D85[012568]|VS985|LGLS990|LGL24(?:[);/ ]|$)'
       model: 'G3'
+    - regex: 'LG-D722'
+      model: 'G3S'
     - regex: 'LG-D693n?|LG-D690n'
       model: 'G3 Stylus'
     - regex: 'LG-D72[23568]'
@@ -9776,6 +9782,12 @@ LG:
       model: 'F60'
     - regex: 'LG-H788'
       model: 'AKA'
+    - regex: 'LM-K920'
+      model: 'K92'
+    - regex: 'LGL41C'
+      model: 'Ultimate 2'
+    - regex: 'LGLS660'
+      model: 'Tribute'
     - regex: '(?:LG-)?H50[02]'
       model: 'Magna'
     - regex: 'LG-(?:X15[05]|X165g)'
@@ -9800,8 +9812,18 @@ LG:
       model: 'Class'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
-    - regex: 'LG-E440'
+    - regex: 'LG-E975'
+      model: 'Optimus G'
+    - regex: 'LG-E435f'
+      model: 'Optimus L3 II'
+    - regex: 'LG-E4(?:70f|40|65f)'
       model: 'Optimus L4 II'
+    - regex: 'LG-E467f'
+      model: 'Optimus L4 II Dual'
+    - regex: 'LG-E460'
+      model: 'Optimus L5 II'
+    - regex: 'LG-E4[17]5f'
+      model: 'Optimus L1 II'
     - regex: 'LG-P875'
       model: 'Optimus F5'
     - regex: 'LGMS500'
@@ -9858,7 +9880,7 @@ LG:
       model: 'Style 3'
     - regex: 'LG-?(?:MS631|H635)(?:[);/ ]|$)'
       model: 'G Stylo'
-    - regex: 'LG-?(?:LS777|L84VL|M430)(?:[);/ ]|$)'
+    - regex: 'LG-?(?:LS777|L84VL|M430|L83BL)(?:[);/ ]|$)'
       model: 'Stylo 3'
     - regex: 'LG-?([TM]P450)(?:[);/ ]|$)'
       model: 'Stylo 3 Plus'
@@ -9880,6 +9902,8 @@ LG:
       model: 'Premier Pro LTE'
     - regex: 'LM-X525'
       model: 'Q60'
+    - regex: 'LM-K315IM'
+      model: 'W31'
     - regex: 'LGL423DL'
       model: 'Solo LTE'
     - regex: 'LM-X210K'
@@ -9914,6 +9938,8 @@ LG:
       model: 'Rabel 2'
     - regex: 'LG-X190'
       model: 'Ray'
+    - regex: 'LGLS740'
+      model: 'Volt'
     - regex: 'LM-X410'
       model: 'LM-X410'
     - regex: 'LGM-K121S'
@@ -9948,13 +9974,13 @@ LG:
       model: 'X6'
     - regex: 'LM-X625N'
       model: 'X6 (2019)'
-    - regex: 'LG-(?:MS?210)'
+    - regex: 'LGMS210|LG-M210'
       model: 'Aristo'
     - regex: 'LM-X210[G]?'
       model: 'Aristo 2'
     - regex: 'LM-X220(?:[);/ ]|$)'
       model: 'Aristo 3'
-    - regex: 'LM-V40(?:5|9N)?(?:[);/ ]|$)'
+    - regex: 'LM-V40(?:5|9N|5EBW)?(?:[);/ ]|$)'
       model: 'V40 ThinQ'
     - regex: 'LM-(?:V500N|V450)(?:[);/ ]|$)'
       model: 'V50 ThinQ'
@@ -10042,6 +10068,8 @@ LG:
       model: 'it'
     - regex: 'LG-M257(?:[);/ ]|$)'
       model: 'Harmony'
+    - regex: 'LM-K400(?:[);/ ]|$)'
+      model: 'Harmony 4'
     - regex: '(?:LG-?)?(?:K220|LS755)'
       model: 'X Power'
     - regex: '(?:LG-?)?M320'
