--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2696,6 +2696,14 @@
     engine: WebKit
     engine_version: "537.36"
 -
+  user_agent: Mozilla/5.0 (Windows NT 6.2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.112 Secure/57.0.441.112 Safari/537.36
+  client:
+    type: browser
+    name: Secure Browser
+    version: 57.0.441.112
+    engine: Blink
+    engine_version: ""
+-
   user_agent: Mozilla/5.0 (Linux; Android 10; JNY-LX1 Build/HUAWEIJNY-L21; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 Mobile Safari/537.36 AgentWeb/4.1.3 UCBrowser/11.6.4.950
   client:
     type: browser
@@ -3038,6 +3046,30 @@
     name: Opera Mini iOS
     version: 16.0.4.120849
     engine: WebKit
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.16 (KHTML, like Gecko) Chrome/20.0.1207.0 PlayFreeBrowser/2.2.0.0 Safari/537.16
+  client:
+    type: browser
+    name: PlayFree Browser
+    version: 2.2.0.0
+    engine: WebKit
+    engine_version: "537.16"
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) chimlac_browser/1.0 Chrome/64.0.3282.140 Safari/537.36
+  client:
+    type: browser
+    name: Chim Lac
+    version: "1.0"
+    engine: Blink
+    engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.91 chimlac/73.0.3683.91 Safari/537.36
+  client:
+    type: browser
+    name: Chim Lac
+    version: 73.0.3683.91
+    engine: Blink
     engine_version: ""
 -
   user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.157 Torrent/44.0.1.3 Safari/537.36
