--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Secure Browser (https://safertechnologies.io/)
+- regex: 'Secure/(?:(\d+[\.\d]+))?'
+  name: 'Secure Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Arvin (https://play.google.com/store/apps/details?id=com.browser.arvin.anti.blokir&hl=sv&gl=US)
 - regex: 'Arvin/(\d+[\.\d]+)'
   name: 'Arvin'
