--- a/Tests/fixtures/smartphone-25.yml
+++ b/Tests/fixtures/smartphone-25.yml
@@ -1637,3 +1637,21 @@
     model: Pro
   os_family: Windows Mobile
   browser_family: Internet Explorer
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; X1 mini) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.116 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 79.0.3945.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Iris
+    model: X1 Mini
+  os_family: Android
+  browser_family: Chrome
