--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11883,9 +11883,11 @@ NextBook:
 
 # ngm
 NGM:
-  regex: 'NGM[_ ][a-z0-9]+|(Forward|Dynamic)[ _]?[^/;]+(?:Build|/)'
+  regex: 'NGM[_ ][a-z0-9]+|(Forward|Dynamic)[ _]?[^/;]+(?:Build|/)|Smart5Plus32GB'
   device: 'smartphone'
   models:
+    - regex: 'Smart5Plus32GB'
+      model: 'Smart 5 Plus'
     - regex: '(Forward|Dynamic)[ _]?([^/;]+) Build'
       model: '$1 $2'
     - regex: '(Forward|Dynamic)[ _]?([^/;]+)/'
@@ -15385,6 +15387,9 @@ Prestigio:
     - regex: 'Muze C3(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
+    - regex: 'PSP3512DUO(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Muze B3'
     - regex: 'PSP3532DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze F3'
@@ -15394,6 +15399,15 @@ Prestigio:
     - regex: 'PSP3510DUO'
       device: 'smartphone'
       model: 'Wize G3'
+    - regex: 'PSP3528DUO'
+      device: 'smartphone'
+      model: 'Wize PX3'
+    - regex: 'PSP3527DUO'
+      device: 'smartphone'
+      model: 'Wize NK3'
+    - regex: 'PSP3468DUO'
+      device: 'smartphone'
+      model: 'Wize OK3'
     # explicit tables models
     - regex: 'PMT3277_3G'
       model: 'MultiPad Ranger 7.0" 3G'
@@ -15403,14 +15417,14 @@ Prestigio:
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
       model: 'Geo Vision Tour 2'
-    - regex: 'PMT(3201|3157)_4G'
-      model: 'Grace $1 4G'
+    - regex: 'PMT(3118|3201|3157)[_ ]([34])G'
+      model: 'Grace $1 $2G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
     - regex: 'PMT3208[_ ]3G'
       model: 'MultiPad Wize 8.0 3G'
-    - regex: 'PMT1177_4G'
-      model: 'MultiPad Wize 1177 4G'
+    - regex: 'PMT(1177|3618|3131)_([34])GE?'
+      model: 'MultiPad Wize $1 $2G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
     - regex: 'PSP7610DUO([ _][A-Z]{2})?'
